--- a/client/product/ProductSingle.html
+++ b/client/product/ProductSingle.html
@@ -1,4 +1,9 @@
 <template name="ProductSingle">
-   <h1> {{product.name}}</h1>
+   
+    <section class="recipes">
+        <h1> {{product.desc}}</h1>
+    </section>
+   
+    
    
 </template>
