--- a/client/records/NewRecord.html
+++ b/client/records/NewRecord.html
@@ -1,6 +1,6 @@
 <template name="NewRecord">
-        <div class="new-recipe-container">
-            {{> quickForm collection="Records" id="insertRecipeForm" type="insert" class= "new-recipe-form"}}
-        </div>
+    <div class="new-recipe-container">
+        {{> quickForm collection="Records" id="insertRecordForm" type="insert" class= "new-recipe-form"}}
+    </div>
         
 </template>
