update send email

--- a/client/records/NewRecord.html
+++ b/client/records/NewRecord.html
@@ -1,5 +1,6 @@
 <template name="NewRecord">
     <div class="new-recipe-container">
+        <i class="fa fa-close"></i>
         {{> quickForm collection="Records" id="insertRecordForm" type="insert" class= "new-recipe-form"}}
     </div>
         
