--- a/client/accounts/Accounts.html
+++ b/client/accounts/Accounts.html
@@ -1,6 +1,9 @@
 <template name="Accounts">
         
-    <button href="/accounts/newAccount/" class="newAccount"> New Account </button>
+    <button href="/accounts/newAccount/" class="newAccount waves-effect waves-light btn">
+        <i class="fa fa-plus left"></i> 
+        New 
+    </button>
 
     <section class="ListAccounts recipe">
         {{> reactiveTable class="table table-striped table-hover ListAccounts" settings=settings }}
