--- a/client/product/Products.html
+++ b/client/product/Products.html
@@ -9,11 +9,11 @@
         </button>
         <div class="divider"></div>
     {{/if}}
-
-
-
-    <section class="ListProducts recipe">
-        {{> reactiveTable class="table table-striped table-hover ListProducts" settings=settings }}
-    </section>
+    <div class="container">
+        <section class="ListProducts recipe">
+            {{> reactiveTable class="striped highlight ListProducts" settings=settings }}
+        </section>
+    </div>
+    
 
 </template>
