--- a/client/product/NewProduct.html
+++ b/client/product/NewProduct.html
@@ -1,5 +1,5 @@
 <template name="NewProduct">
-    <div class="rows">
+    <div class="">
         
         {{#autoForm collection="Products" type="insert" id="insertProductForm"}}
         <div class="row">
