add page background

--- a/client/settings/index.html
+++ b/client/settings/index.html
@@ -4,7 +4,35 @@
             <ul class="collection with-header">
                 <li class="collection-header"><h4>Product Managment</h4></li>
                 <li class="collection-item">
-                    <a href="/familys"><i class="material-icons right">view_module</i> <span class="hidden-sm-down">Family</span></a></li>   
+                    <a href="/products">
+                        <i class="material-icons right">local_parking</i> 
+                        <span class="hidden-sm-down">Product</span>
+                    </a>
+                </li>
+                
+                <li class="collection-item">
+                    <a href="/familys">
+                        <i class="material-icons right">view_module</i> 
+                        <span class="hidden-sm-down">Family</span>
+                    </a>
+                </li>   
+            </ul>
+        </div>
+
+        <div class="col s4">
+                <ul class="collection with-header">
+                    <li class="collection-header"><h4>User Managment</h4></li>
+                    <li class="collection-item">
+                        <a href="/#"><i class="material-icons right">local_parking</i> 
+                            <span class="hidden-sm-down">User's</span>
+                        </a>
+                    </li>
+                    
+                    <li class="collection-item">
+                        <a href="/#"><i class="material-icons right">view_module</i> 
+                            <span class="hidden-sm-down">Roles</span>
+                        </a>
+                    </li>   
                 </ul>
         </div>
     </div>
