Image Managment on Product

--- a/client/product/Product.html
+++ b/client/product/Product.html
@@ -1,7 +1,9 @@
 <template name="Product">
 
     <div class="card">
-            {{pricture}}
+            
+            <img src="{{image.link}}"/>
+            
             <div class="card-block">
                 <h4 class="card-title">{{product}}</h4>
                 <p class="card-text">{{desc}}.</p>
