--- a/client/settings/index.html
+++ b/client/settings/index.html
@@ -33,6 +33,11 @@
                             <span class="hidden-sm-down">Roles</span>
                         </a>
                     </li>   
+                    <li class="collection-item">
+                        <a href="/Banks"><i class="material-icons right">view_module</i> 
+                            <span class="hidden-sm-down">Banks</span>
+                        </a>
+                    </li>  
                 </ul>
         </div>
     </div>
