--- a/client/accounts/create.html
+++ b/client/accounts/create.html
@@ -1,57 +1,70 @@
 <template name="NewAccount">
 
-    <div class="">
+    {{#autoForm collection="Accounts" type="insert" id="insertProductForm"}}
+    <div class="row">
+        <fieldset>
+            <legend>New Account</legend>
+            <div class="container">
+                <div class="row">
+                    <div class="col s6">
+                        {{> afQuickField name="code" }} {{> afQuickField name="name" }}
+                    </div>
+                    <div class="col s4">
+                        {{> afQuickField name="picture"}}
+                    </div>
 
-        {{#autoForm collection="Accounts" type="insert" id="insertProductForm"}}
-        <div class="row">
-            <fieldset>
-                <legend>New Account</legend>
+                </div>
 
-                <div class="col 12">
+            </div>
 
-                    <!-- <ul class="collapsible" data-collapsible='expandable'>
+
+            <ul class="collapsible" data-collapsible="expandable">
+                <li>
+                    <div class="collapsible-header active">
+                        <i class="material-icons">info_outline</i>General Info</div>
+                    <div class="collapsible-body">
+                        {{> afQuickField name="firstName" }} {{> afQuickField name="surname"}} {{> afQuickField name="age" }} {{> afQuickField name="birthDate"
+                        }} {{> afQuickField name="academicLevel"}}
+
+                    </div>
+                </li>
+                <li>
+                    <div class="collapsible-header">
+                        <i class="material-icons">contacts</i>Contact's</div>
+                    <div class="collapsible-body">
+                        {{> afQuickField name="address" }} {{> afQuickField name="contact"}} {{> afQuickField name="telphone"}} {{> afQuickField
+                        name="otherContact"}}
+                    </div>
+                </li>
+                <li>
+                    <div class="collapsible-header">
+                        <i class="material-icons">attach_money</i>Bank Account's</div>
+                    <div class="collapsible-body">
+                        {{> afQuickField name="haveBankAccount"}} {{> afQuickField name="bankAccount" value="true" }}
+
+                    </div>
+                </li>
+                <li>
+                    <div class="collapsible-header">
+                        <i class="material-icons">list</i>Other</div>
+                    <div class="collapsible-body">
+                        {{> afQuickField name="status"}} {{> afQuickField name="desc"}} {{> afQuickField name="type"}} {{> afQuickField name="relationships"}}
+                    </div>
+                </li>
+
+            </ul>
+
+            <div class="col 12">
+
+                <!-- <ul class="collapsible" data-collapsible=''>
                         <li>
                             <div class="collapsible-header active"><i class="material-icons">Gender</i>General Info</div>
                             <div class="collapsible-body"> -->
-                    <div class="contaneir">
-                        <div class="col s4 ">
 
 
-                            {{> afQuickField name="code" }} {{> afQuickField name="name" }} {{> afQuickField name="firstName" }} {{> afQuickField name="surname"
-                            }}
 
-                        </div>
-                        <div class="col s4">
-                            {{> afQuickField name="age" }} {{> afQuickField name="birthDate" }} {{> afQuickField name="address" }} {{> afQuickField name="academicLevel"
-                            }}
-                        </div>
-                        <div class="col s4">
-                            {{> afQuickField name="contact"}} {{> afQuickField name="telphone"}} {{> afQuickField name="otherContact"}} {{> afQuickField
-                            name="status"}}
-                        </div>
 
-                        <div class="col s4">
-                            {{> afQuickField name="desc"}}
-                        </div>
-                        <div class="col s4">{{> afQuickField name="type"}}</div>
-                        <div class="col s4">
-                            {{> afQuickField name="picture"}}
-                        </div>
-                        <div class="col s4">
-                            {{> afQuickField name="relationships"}}
-                        </div>
-                        <div class="col s4">
-                            {{> afQuickField name="haveBankAccount"}}
-                        </div>
-                        <div class="col s6">
-                            {{> afQuickField name="bankAccount" value="true" }}
-                                {{#if afFieldValueIs name="haveBankAccount" value=true }} 
-                                 
-                            {{/if}}
-                        </div>
-                    </div>
-
-                    <!-- </li>
+                <!-- </li>
                         <li>
                             <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
                             <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
@@ -61,28 +74,28 @@
                             <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
                         </li>
                     </ul>     -->
-                </div>
-            </fieldset>
-        </div>
-        <div class="divider"></div>
-        <div class="rows">
-            <button type="reset" class="btn waves-effect waves-light">
-                <i class="material-icons right">cancel</i>
-                Reset
-            </button>
-            <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-                <i class="material-icons right">send</i>
-            </button>
-            <button type="submit" class="btn btn-danger">
-                <i class="fa fa-close"></i>
-            </button>
-        </div>
-
-        {{/autoForm}}
-
-
-
-
-
+            </div>
+        </fieldset>
     </div>
+    <div class="divider"></div>
+    <div class="rows">
+        <button type="reset" class="btn waves-effect waves-light">
+            <i class="material-icons right">cancel</i>
+            Reset
+        </button>
+        <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+            <i class="material-icons right">send</i>
+        </button>
+        <button type="submit" class="btn btn-danger">
+            <i class="fa fa-close"></i>
+        </button>
+    </div>
+
+    {{/autoForm}}
+
+
+
+
+
+
 </template>
