--- a/client/accounts/details.html
+++ b/client/accounts/details.html
@@ -1,9 +1,10 @@
 <template name="AccountSingle">
 
-  <button class="list-Records"> <i class="material-icons left">cancel</i> Records</button>
+  <button class="edit"> <i class="material-icons left">edit</i> Edit</button>
+  <button class="list-Records"> <i class="material-icons left">business</i> Records</button>
   <button class="list-Appoiment"> <i class="material-icons left">format_list_bulleted</i> Appoiments</button>
   <button class="delete"> <i class="material-icons left">delete</i>  Delete</button>
-  <button class="edit"> <i class="material-icons left">edit</i> Edit</button>
+  
 
   <div class="divider"></div>
 
@@ -25,7 +26,7 @@
 
       </div>
 
-      <ul class="collapsible" data-collapsible="expandable">
+      <ul class="collapsible" data-collapsible="accordion">
         <li>
           <div class="collapsible-header active">
             <i class="material-icons">info_outline</i>General Info</div>
