--- a/client/accounts/create.html
+++ b/client/accounts/create.html
@@ -53,7 +53,11 @@
                     <div class="collapsible-header">
                         <i class="material-icons">list</i>Other</div>
                     <div class="collapsible-body">
-                        {{> afQuickField name="status"}} {{> afQuickField name="desc"}} {{> afQuickField name="type"}} {{> afQuickField name="relationships"}}
+                        
+                        {{> afQuickField name="desc"}} 
+                        {{> afQuickField name="type"}} 
+                        {{> afQuickField name="status"}} 
+                        <!-- {{> afQuickField name="relationships"}} -->
                     </div>
                 </li>
                 <li>
