--- a/client/product/Dashboard.html
+++ b/client/product/Dashboard.html
@@ -21,6 +21,9 @@
                     </ul>
                 </nav>
             </div>
+            <div class="row">
+                {{> loginButtons}}
+            </div>
 
             <div class="row">
                 {{#if Template.subscriptionsReady}}
