--- a/client/product/Dashboard.html
+++ b/client/product/Dashboard.html
@@ -22,7 +22,7 @@
                 </nav>
             </div>
             <div class="row">
-                {{> loginButtons}}
+                {{> atForm state='signIn'}}
             </div>
 
             <div class="row">
