update user managment

--- a/client/product/Dashboard.html
+++ b/client/product/Dashboard.html
@@ -22,7 +22,8 @@
                 </nav>
             </div>
             <div class="row">
-                {{> atForm state='signIn'}}
+                
+                {{> atForm}}
             </div>
 
             <div class="row">
