--- a/client/accounts/Dashboard.html
+++ b/client/accounts/Dashboard.html
@@ -1,7 +1,7 @@
 <template name="DashBoard_Account">
   <div class="container">
     <div class="row">
-        {{> atForm state='forgotPwd'}}
+        {{> atForm}}
     </div>
     
     <div class="row">
