update dashboard product

--- a/client/product/Dashboard.html
+++ b/client/product/Dashboard.html
@@ -31,13 +31,7 @@
 
                     {{#each products}}
                         {{> Product}}
-                    {{/each}}
-
-                <!-- <div class="card-group">
-                    {{#each products}}
-                        {{> Product}}
-                    {{/each}}
-                </div> -->
+                    {{/each}}x
                     
                 {{else}}
                     <p>Loading</p>
