--- a/client/qoutes/create.html
+++ b/client/qoutes/create.html
@@ -15,7 +15,9 @@
                                     {{> afQuickField name="begin" }}
                                     {{> afQuickField name="end" }}
                                     {{> afQuickField name="type"}}
-                                    {{> afQuickField name="value"}}
+                                    {{> afQuickField name="frequency"}}
+                                    {{> afQuickField name="value" step="1"}}
+
                             </div>
                     </fieldset>
             </div>
