--- a/client/qoutes/create.html
+++ b/client/qoutes/create.html
@@ -28,12 +28,12 @@
         <div class="rows">
                 <button type="reset" class="btn waves-effect waves-light">
                     <i class="material-icons right">cancel</i>
-                    Reset 
+                    Cancelar 
                 </button>    
-                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                <button class="btn waves-effect waves-light" type="submit" name="action">Gravar
                      <i class="material-icons right">send</i>
                 </button>
-                <button class="qoute-close btn waves-effect waves-light" type="reset" name="action"> Close
+                <button class="qoute-close btn waves-effect waves-light" type="reset" name="action"> Feixar
                     <i class="material-icons right">close</i>
                 </button>
                     
