--- a/client/accounts/index.html
+++ b/client/accounts/index.html
@@ -6,7 +6,7 @@
     {{else}}
         <button class="new-Account waves-effect waves-light btn">
             <i class="fa fa-plus left"></i> 
-            New 
+            Novo 
         </button>
         <div class="divider"></div>
     {{/if}}
