--- a/client/invoices/index.html
+++ b/client/invoices/index.html
@@ -4,7 +4,7 @@
     {{else}}
         <button class="new-Invoice waves-effect waves-light btn">
             <i class="fa fa-plus left"></i> 
-            New 
+            Novo 
         </button>
         <div class="divider"></div>
     {{/if}}
