--- a/client/qoutes/index.html
+++ b/client/qoutes/index.html
@@ -5,7 +5,7 @@
     {{else}}
         <button class="new-Qoute waves-effect waves-light btn">
             <i class="fa fa-plus left"></i> 
-            New 
+            Novo 
         </button>
         <div class="divider"></div>
     {{/if}}
