--- a/client/banks/create.html
+++ b/client/banks/create.html
@@ -9,7 +9,14 @@
                     <legend>New Bank</legend>
 
                     <div class="col s6 ">
-                        {{> afQuickField name="code" }} {{> afQuickField name="desc" }}
+                        {{> afQuickField name="code" }} 
+                        {{> afQuickField name="desc" }}
+                        {{> afQuickField name="codeDirectDebit" }} 
+                        
+                        {{> afQuickField name="contact" }}
+                        {{> afQuickField name="email" }}
+                        {{> afQuickField name="notes" }} 
+                        {{> afQuickField name="website" }}
 
                     </div>
                 </fieldset>
