--- a/client/banks/details.html
+++ b/client/banks/details.html
@@ -1,7 +1,7 @@
-<template name="EditBank">
+<template name="DetailsBank">
     <div class="rows">
 
-        {{#autoForm collection="Banks" type="update" id="insertFamilyForm"}}
+        {{#autoForm collection="Banks" type="readonly" id="insertFamilyForm"}}
 
         <div class="rows">
             <div class="card">
