add bank managment

--- a/client/banks/details.html
+++ b/client/banks/details.html
@@ -1,7 +1,7 @@
-<template name="DetailsBank">
+<template name="BankDetails">
     <div class="rows">
 
-        {{#autoForm collection="Banks" type="readonly" id="insertFamilyForm"}}
+        {{#autoForm collection="Banks" doc=bank type="readonly"  id="insertFamilyForm"}}
 
         <div class="rows">
             <div class="card">
