--- a/client/companies/create.html
+++ b/client/companies/create.html
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="card">
                 <fieldset>
-                    <legend>New Company</legend>
+                    <legend>Criação de Organização</legend>
 
                     <div class="container">
                         <div class="row">
@@ -25,7 +25,7 @@
                     <ul class="collapsible" data-collapsible="accordion">
                         <li>
                             <div class="collapsible-header active">
-                                <i class="material-icons">info_outline</i>General Info</div>
+                                <i class="material-icons">info_outline</i>Dados Gerais</div>
                             <div class="collapsible-body">
                                 {{> afQuickField name="desc" }}
                                 {{> afQuickField name="open" }}
@@ -36,19 +36,19 @@
                         </li>
                         <li>
                             <div class="collapsible-header">
-                                <i class="material-icons">contacts</i>Contact's</div>
+                                <i class="material-icons">contacts</i>Contactos</div>
                             <div class="collapsible-body">
                                 {{> afQuickField name="contact" }}
                             </div>
                         </li>
+                        <li>
+                            <div class="collapsible-header">
+                                <i class="material-icons">attach_money</i>Dados Bancarios</div>
+                            <div class="collapsible-body">
+                                {{> afQuickField name="bankAccount" }}  
+                            </div>
+                        </li>
                     </ul>
-
-                    <div class="col s6 ">
-                        
-                        
-                        {{> afQuickField name="haveBankAccount" }}
-                        {{> afQuickField name="bankAccount" }}
-                    </div>
                 </fieldset>
             </div>
 
@@ -56,10 +56,11 @@
             <div class="rows">
                     <button type="reset" class="btn waves-effect waves-light">
                         <i class="material-icons right">cancel</i>
-                        Reset 
+                        Recomeçar 
                     </button>    
-                    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                    <button class="btn waves-effect waves-light" type="submit" name="action">
                          <i class="material-icons right">send</i>
+                         Guardar
                     </button>
                     <button class="company-close btn waves-effect waves-light" type="reset" name="action"> Close
                         <i class="material-icons right">close</i>
