--- a/client/companies/create.html
+++ b/client/companies/create.html
@@ -10,7 +10,7 @@
 
                     <div class="container">
                         <div class="row">
-                            <div class="col s6">
+                            <div class="col x6">
                                 {{> afQuickField name="code" }} 
                                 {{> afQuickField name="name" }}
                             </div>
