--- a/client/eschool/students/students.html
+++ b/client/eschool/students/students.html
@@ -4,6 +4,7 @@
             <h3>students</h3>
         </div>
         <div class="four columns right">
+                <a class="button button-primary u-full-width" href="/add-student">add a new student</a>
             {{#if isInRole 'admin'}}
                 <a class="button button-primary u-full-width" href="/add-student">add a new student</a>
             {{/if}}
