school/teacher managment

--- a/client/eschool/school/schools.html
+++ b/client/eschool/school/schools.html
@@ -1,4 +1,4 @@
-<template name="schools">
+<template name="schoolsList">
     <div class="row top-bar">
         <div class="six columns">
             <h3>{{schoolCount}} schools</h3>
