add school managment

--- a/client/eschool/school/addSchool.html
+++ b/client/eschool/school/addSchool.html
@@ -2,10 +2,11 @@
     <div class="row">
         <div class="twelve columns">
             <h3>
-                Add a new school
+                Adicionar Nova Escola
             </h3>
             <p>
-                add a new school to the MINERVA FOR SCHOOLS® ecosystem. Add the details which will also generate the school's admin.
+                Adicionar nova escola a SISSA para escolas primarias. 
+                Adiciona os detalhes  para gerar também os dados do administrador.
             </p>
             <hr>
         </div>
@@ -32,7 +33,7 @@
         <div class="row">
             <div class="twelve columns">
                 <hr>
-                <button type="submit" class="button button-primary add-school">add this school</button>
+                <button type="submit" class="button button-primary add-school">adicionar esta escola!</button>
             </div>
         </div>
     {{/autoForm}}
