--- a/client/eschool/school/schoolProfile.html
+++ b/client/eschool/school/schoolProfile.html
@@ -9,11 +9,11 @@
         </div>
         <div class="eight columns">
             <h4>{{school.name}}</h4>
-            <p>school number: <strong>{{school.schoolNumber}}</strong></p>
-            <p>phone number: <strong>{{school.phoneNumber}}</strong></p>
-            <p>email: <strong>{{school.email}}</strong></p>
+            <p>Codigo: <strong>{{school.schoolNumber}}</strong></p>
+            <p>Número de Telefone: <strong>{{school.phoneNumber}}</strong></p>
+            <p>Email: <strong>{{school.email}}</strong></p>
             {{#if school.address}}
-                <p>address: <strong>{{school.address}}</strong></p>
+                <p>Morada: <strong>{{school.address}}</strong></p>
             {{/if}}
         </div>
     </div>
